--- a/assignments/crud-api/package.json
+++ b/assignments/crud-api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "ts-node ./index.ts",
+    "start:dev": "nodemon",
     "start:prod": "rm -rf ./build && tsc  --rootDir . --outDir build && node ./build/index.js"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/uuid": "^9.0.0",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
