--- a/assignments/crud-api/package.json
+++ b/assignments/crud-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-node ./tests/get.test.ts",
     "start:dev": "nodemon",
     "start:prod": "rm -rf ./build && tsc  --rootDir . --outDir build && node ./build/index.js"
   },
