feat: test with jest and ESM

--- a/assignments/crud-api/tsconfig.json
+++ b/assignments/crud-api/tsconfig.json
@@ -6,5 +6,19 @@
   "ts-node": {
     // Tell ts-node CLI to install the --loader automatically, explained below
     "esm": true
+  },
+  "jest": {
+    "extensionsToTreatAsEsm": [".ts"],
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "transform": {
+      "^.+\\.[tj]s?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    }
   }
 }
