--- a/assignments/crud-api/package.json
+++ b/assignments/crud-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "rm -rf ./build && tsc  --rootDir . --outDir build && jest './build/test'",
+    "test": "jest",
     "start:dev": "nodemon",
     "start:prod": "rm -rf ./build && tsc  --rootDir . --outDir build && node ./build/index.js"
   },
@@ -13,16 +13,14 @@
   "author": "KSGitUser",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
     "@tsconfig/node18-strictest-esm": "^1.0.1",
+    "@types/jest": "^29.2.5",
     "@types/uuid": "^9.0.0",
     "babel": "^6.23.0",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
